@@ -5,9 +5,16 @@ import org.testng.annotations.Test;
 public class Test2Test extends BaseSequentialSample {
 
   @Test
-  public void f2() { 
-    ppp("f2");
+  public void f21() { 
+    ppp("f21");
     addId(Thread.currentThread().getId());
   }
+  
+  @Test
+  public void f22() { 
+    ppp("f22");
+    addId(Thread.currentThread().getId());
+  }
+
 
 }
