@@ -18,7 +18,7 @@
     </groups>
     -->
     <classes>
-      <class name="test.tmp.B" />
+      <class name="test.thread.ParallelTestTest" />
     </classes>
   </test>
  
